# AbBindGym

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: data_availability.md  reproduction.md
examples/: abela_minimal.csv  demo_mutations.csv  run_demo.py
examples/expected_output/: demo_scores.csv
progen/: __init__.py
progen2_AbELA/: README.md  __init__.py  likelihood.py  optimize_abela_cdrh.py  rank_af3_candidates.py  sample.py  train_abela_lora.py
progen2_AbELA/progen/: __init__.py  abela.py  lora.py  modeling_progen.py  runtime.py  tokenization.py
supervised/: README.md  __init__.py
supervised/ABBind/: batch_train_abbind.sh  common.sh  prepare_ABBind_split_by_cluster.py  run_all_special_models.sh
supervised/AbCoV/: batch_evaluate_abcov.sh  batch_train_abcov.sh  common.sh  prepare_AbCoV_splits.py  run_all_special_models.sh
supervised/AbDesign/: batch_evaluate_abdesign_antigen.sh  batch_evaluate_abdesign_cluster.sh  batch_train_abdesign_antigen.sh  batch_train_abdesign_cluster.sh  prepare_abdesign_elisa_splits.py  profile_paths.sh  run_all_special_antigen.sh  run_all_special_models_cluster.sh
supervised/AbELA/: batch_evaluate_abela.sh  batch_train_abela.sh  batch_train_special_models.sh  common.sh  prepare_AbELA_split_by_cluster.py
supervised/AlphaSeq/: batch_evaluate_alphaseq.sh  batch_train_alphaseq.sh  batch_train_special_models.sh  prepare_alphaseq_assets.py  profile_paths.sh
supervised/BindingGYM/: profile_paths.sh  (+4 more)
tests/: test_abela_loader.py  test_demo.py  test_zero_shot_metrics.py
zero_shot/: README.md  __init__.py
(+123 files in other folders)
